--- a/001-020/007-CSS悬停效果之字形D/style.css
+++ b/001-020/007-CSS悬停效果之字形D/style.css
@@ -1,9 +1,9 @@
-body{
+*{
   margin: 0;
   padding: 0;
 }
 
-div{
+div {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -11,21 +11,22 @@ div{
   width: 300px;
   height: 300px;
   border-radius: 50%;
+  background-color: #fff;
   box-shadow: 0 0 0 15px #03a9f4;
   box-sizing: border-box;
   text-align: center;
-  transition: .5s;
+  transition: 0.5s;
 }
 
-div:hover{
+div:hover {
   border-radius: 0;
 }
 
-div::before{
+div::before {
   content: '';
   position: absolute;
-  left: 0;
   top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   background-color: #03a9f4;
@@ -34,18 +35,18 @@ div::before{
   border-radius: 10px;
 }
 
-div p{
+div p {
   position: absolute;
   box-sizing: border-box;
   top: 50%;
   transform: translateY(-50%);
   padding: 20px;
-  font-size:16px;
+  font-size: 16px;
   font-family: sans-serif;
   color: #fff;
-  transform: .5s;
+  transition: .5s;
 }
 
-div:hover p{
+div:hover p {
   box-shadow: 0 0 50px rgba(0, 0, 0, .5);
 }
